syntax = "proto3";
import "google/protobuf/empty.proto";

message LogBody {
    string timestamp = 1;
    string level = 2;
    string type = 3;
    string message = 4;
    string envId = 5;
}

message IPutLogRequest {
    repeated LogBody logs = 1;
}

service LogService {
    rpc IPutLog (IPutLogRequest) returns (google.protobuf.Empty);
}